# glabella

./: .appveyor.yml  .codecov.yml  .gitignore  LICENSE  Makefile.am  PackageInfo.g  README.md  compiler_questions.txt  configure.ac  configure.ac~  configure~  init.g  makedoc.g  read.g
.github/workflows/: CI.yml
_data/: package.yml
doc/: bib.xml.bib  chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap1_mj.html  chap2.html  chap2.txt  chap2_mj.html  chap3.html  chap3.txt  chap3_mj.html  chapBib.html  chapBib.txt  chapBib_mj.html  chapInd.html  chapInd.txt  chapInd_mj.html
gap/: _structure.autodoc  examples.autodoc  interfaces.gd  interfaces.gi  intro.autodoc  usage.autodoc
src/: glabella.cc  glabella_traces.c  labelface.cc
tst/: bliss_test.g  blissinterface_32bit.tst  blissinterface_64bit.tst  clif_test.g  glabella_32bit.tst  glabella_64bit.tst  glabella_test.g  interfaces_64bit.tst  labelface_64bit.tst  labelface_test.g  nauty_test.g  nautyinterface_32bit.tst  nautyinterface_64bit.tst  paley_test.g  testall.g  tests_20210311.g  tests_20210312.g
